--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "classes_template",
   "version": "1.0.0",
-  "description": "template for future classes",
+  "description": "Template for future classes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
